# WRO-Future-Engineers-2025

./: README.md
models/: Axel Servo Holder.stl  Base Plate.stl  Battery and Camera Holder v4.stl  Camera Stand v9 25 deg.stl  Chassis Pin v5.stl  Differential Cover v3.stl  Front Axel v3.stl  Motor Gear Holder.stl  RPI Base.stl  RSP HAT Holder v7.stl  Rear Motor Stand v16.stl  Servo Stand v3.stl  Wheel Bearing Holder v6.stl  Wheel Wrench.stl  camera holder v1.stl  camera_mount.stl  chassis full test v1.stl  chassis.stl  differential drive axel.stl  front_axle.stl  full chassis v1.stl  pi base v1.stl  rasp_mount.stl  servo_connector.stl  steer_beam.stl  wheel_insert.stl
models/extra/: Axel Servo Holder.stl  Servo Stand v4.stl  Wheel Bearing Holder v6.stl  camera holder v2.stl  camera holder v3.stl  camera stand holder adjustable.stl  camera stand v5.stl  camera stand v6 30deg adjustable.stl  camera stand v7 25deg adjustable.stl  camera stand v8 21deg adjustable.stl
other/: wromap obstacle.jfif
schemes/: README.md
src/: CONSTS.py  ITWQORKSSS.py  OOOOOOOOP.py  ObsPillarNavTest.py  README.md  WORKSBEST.py  buttonscan.py  e.py  exitparking.py  findmaskshift.py  helper.py  hsvrange3way.py  imu_node.py  imu_scan.py  lab_thresh.py  lidar_parser.py  obstaclechallenge.py  obstest.py  obyay.py  openchallenge.py  roi.py  thing.py  w.py
src/testing-structure-nodes/real/: CMakeLists.txt  LED_node.py  cameraobstacle.py  cameraopen.py  control.py  imu.py  lidar_node.py  nagivate.py  navigateopen.py  nno.py  ros_robot_controller_SDK.py  setup.py  values.py
video/: README.md
(+61 files in other folders)
